added getLast and forkId to eth_config (#8946)
* added getLast and forkId to eth_config
* added custom genesis so we can test next and last
* use fork id manager to get the fork ids

Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>

---------

Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>
# Conflicts:
#	ethereum/core/src/main/java/org/hyperledger/besu/ethereum/forkid/ForkIdManager.java
Signed-off-by: jflo <justin+github@florentine.us>